fixed button LESS issues - double defined plat-select, incorrect attr selector, and extraneous spacing

--- a/controls/controls/button/button.less
+++ b/controls/controls/button/button.less
@@ -43,7 +43,6 @@
                 border-color: @primaryColorLight;
             }
         }
-
     }
 
     &.button-secondary {
@@ -58,7 +57,6 @@
                 border-color: @secondaryColorLight;
             }
         }
-
     }
 
     &.button-neutral {
@@ -73,7 +71,6 @@
                 border-color: @neutralColorLight;
             }
         }
-
     }
 
     &.button-success {
@@ -88,7 +85,6 @@
                 border-color: @successColorLight;
             }
         }
-
     }
 
     &.button-danger {
@@ -103,7 +99,6 @@
                 border-color: @dangerColorLight;
             }
         }
-
     }
 
     &.button-caution {
@@ -118,7 +113,6 @@
                 border-color: @cautionColorLight;
             }
         }
-
     }
 
     &.button-outline {
@@ -142,8 +136,7 @@
 
 /// ============== Button States =============== ///
 
-    &:hover,
-    &.plat-selected {
+    &:hover {
         opacity: 0.85;
     }
 
@@ -153,7 +146,7 @@
     }
 
     &.button-disabled,
-    &[disabled=disabled],
+    &[disabled="disabled"],
     &:disabled {
         opacity: 0.5;
         cursor: default;
